2014-01-31  László Langó  <lango@inf.u-szeged.hu>

        Fix table sizing when 'max-width' is used.
        https://bugs.webkit.org/show_bug.cgi?id=115156

        Reviewed by Andreas Kling.

        * fast/table/css-table-max-width-expected.txt:
        * fast/table/css-table-max-width.html:
        * fast/table/html-table-width-max-width-constrained-expected.txt: Added.
        * fast/table/html-table-width-max-width-constrained.html: Added.

2014-01-28  Timothy Hatcher  <timothy@apple.com>

        Add column number and call timing support to LegacyProfiler.

        https://bugs.webkit.org/show_bug.cgi?id=127764

        Reviewed by Joseph Pecoraro.

        Update test and results to include column numbers.

        * fast/profiler/anonymous-event-handler-expected.txt:
        * fast/profiler/anonymous-function-called-from-different-contexts-expected.txt:
        * fast/profiler/anonymous-function-calls-built-in-functions-expected.txt:
        * fast/profiler/anonymous-function-calls-eval-expected.txt:
        * fast/profiler/anonymous-functions-with-display-names-expected.txt:
        * fast/profiler/apply-expected.txt:
        * fast/profiler/built-in-function-calls-anonymous-expected.txt:
        * fast/profiler/built-in-function-calls-user-defined-function-expected.txt:
        * fast/profiler/call-expected.txt:
        * fast/profiler/calling-the-function-that-started-the-profiler-from-another-scope-expected.txt:
        * fast/profiler/compare-multiple-profiles-expected.txt:
        * fast/profiler/constructor-expected.txt:
        * fast/profiler/dead-time-expected.txt:
        * fast/profiler/document-dot-write-expected.txt:
        * fast/profiler/event-handler-expected.txt:
        * fast/profiler/execution-context-and-eval-on-same-line-expected.txt:
        * fast/profiler/inline-event-handler-expected.txt:
        * fast/profiler/many-calls-in-the-same-scope-expected.txt: