@@ -1,0 +1,13 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            #region { border: 25px solid green; width: 50px; height: 50px; background-color: blue; }
+        </style>
+    </head>
+    <body>
+        <p>Test that a list item can become a region.</p>
+        <p>On success, you should see a blue rectangle with a green border and no red.<p>
+        <div id="region"></div>
+    </body>
+</html>
