@@ -1,0 +1,15 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            #article { -webkit-flow-into: flow; width: 50px; height: 50px; background-color: blue; }
+            #region { -webkit-flow-from: flow; border: 25px solid green; display: list-item; background-color: red; width: 50px; height: 50px; }
+        </style>
+    </head>
+    <body>
+        <p>Test that a list item can become a region.</p>
+        <p>On success, you should see a blue rectangle with a green border and no red.<p>
+        <div id="article"></div>
+        <div id="region"></div>
+    </body>
+</html>
