@@ -1,3 +1,13 @@
+2014-01-31  Mihnea Ovidenie  <mihnea@adobe.com>
+
+        [CSSRegions] Add test(s) for list item as region
+        https://bugs.webkit.org/show_bug.cgi?id=122961
+
+        Reviewed by Dirk Schulze.
+
+        * fast/regions/list-item-as-region-expected.html: Added.
+        * fast/regions/list-item-as-region.html: Added.
+
 2014-01-31  László Langó  <lango@inf.u-szeged.hu>
 
         Fix table sizing when 'max-width' is used.
